--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000 --host"
   },
   "dependencies": {
     "mapbox-gl": "^2.13.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.10",
