Docker files updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+  react-app:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+
   meetnow-db:
     image: postgis/postgis:latest
     hostname: postgres-host
@@ -12,6 +20,7 @@ services:
       - POSTGRES_DB=meetnow_db
   meetnow-spring:
     build:
+      context: ./src/backend
       dockerfile: dockerfiles/springapp.Dockerfile
     ports:
       - "8080:8080"
