Added postgis extension, riddance of unneccessary imports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
 services:
-#  react-app:
-#    build:
-#      dockerfile: dockerfiles/reactapp.Dockerfile
-#    ports:
-#      - "3000:3000"
   meetnow-db:
-    image: postgres:15
+    image: postgis/postgis:latest
     hostname: postgres-host
     ports:
       - "5432:5432"
@@ -15,15 +10,15 @@ services:
       - POSTGRES_PASSWORD=meetnow-password
       - POSTGRES_USER=meetnow-user
       - POSTGRES_DB=meetnow_db
-#  meetnow-spring:
-#    build:
-#      dockerfile: dockerfiles/springapp.Dockerfile
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - meetnow-db
-#    environment:
-#      WAIT_HOSTS: postgres-host
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://meetnow-db:5432/meetnow_db
+  meetnow-spring:
+    build:
+      dockerfile: dockerfiles/springapp.Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - meetnow-db
+    environment:
+      WAIT_HOSTS: postgres-host
+      SPRING_DATASOURCE_URL: jdbc:postgresql://meetnow-db:5432/meetnow_db
 volumes:
   pgdata:
