--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+#  react-app:
+#    container_name: frontend
+#    build:
+#      context: ./frontend
+#      dockerfile: Dockerfile
+#    ports:
+#      - "3000:3000"
+
   meetnow-db:
     image: postgis/postgis:latest
     hostname: postgres-host
@@ -12,7 +20,8 @@ services:
       - POSTGRES_DB=meetnow_db
   meetnow-spring:
     build:
-      dockerfile: dockerfiles/springapp.Dockerfile
+      context: ./backend # specify the path to the directory containing the Dockerfile
+      dockerfile: springapp.Dockerfile
     ports:
       - "8080:8080"
     depends_on:
