--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/frontend/node_modules
-
+frontend
 
 # dependencies
 /node_modules
